--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     </head>
     <body>
         <header>
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
             <h3 id="h3center">Financial calculators</h3>
             <img onclick="hideOrToggleMenu()" class="menu-icon" id="menu" src="menu.svg" alt="menu" >
             <nav class="nav" id="nav">
                 <img onclick="hideOrToggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
                 <ul>
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="/index.html">Mortgage-calc</a>
+                        <a href="index.html">Mortgage-calc</a>
                     </li>
                 </ul>
             </nav>
@@ -33,22 +33,22 @@
         </section>
         <section class="box-calc" >
             <form class="mortgage-form" onsubmit="return loanMonthly()" action="#" id="myform" method="GET">
-                <div class="box-left">
-                    <label for="balance">Mortgage balance:</label>
-                    <label for="years">  Terms [ years ]: </label>                        
-                    <label for="interest">Interest rate [ % ]: </label>
-                    <button id="submit" type="submit">Calculate</button>
-                </div>
-                <div class="box-right">
-                    <input type="number" name="Balance" id="balance">
-                    <input type="number" name="Years" id="years" max="40" min="1" step="0.1">
-                    <input id="interest" name="interest" type="number" max="10" min="1" step="0.01">                        
-                    <input id="pmt" disabled>
-                </div>
+                <ul class="box-left">
+                    <li><label for="balance">Mortgage balance:</label></li>
+                    <li><label for="years">  Terms [ years ]: </label></li>                     
+                    <li><label for="interest">Interest rate [ % ]: </label></li>
+                    <li><button id="submit" type="submit">Calculate</button></li>
+                </ul>
+                <ul class="box-right">
+                    <li><input type="number" name="Balance" id="balance"></li>
+                    <li><input type="number" name="Years" id="years" max="40" min="1" step="0.1"></li>
+                    <li><input id="interest" name="interest" type="number" max="10" min="1" step="0.01"></li>                      
+                    <li><input id="pmt" disabled></li>
+                </ul>
             </form>
         </section>
         <footer>
-            <a href="/about.html">About</a>
+            <a href="about.html">About</a>
             <p>keegorg - calc 22.03.2020</p>
             <a href="mailto:jangeorg85@gmail.com">Contact</a>
         </footer>
