--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><input type="number" name="Balance" id="balance"></li>
                     <li><input type="number" name="Years" id="years" max="40" min="1" step="0.1"></li>
                     <li><input id="interest" name="interest" type="number" max="10" min="1" step="0.01"></li>                      
-                    <li><input id="pmt" disabled></li>
+                    <li><input id="pmt" placeholder="Monthly payment" disabled></li>
                 </ul>
             </form>
         </section>
