added link new calculator savings

--- a/about.html
+++ b/about.html
@@ -10,20 +10,23 @@
     </head>
     <body>
         <header>
-            <a href="index.html">Home</a>
+            <a href="/index.html">Home</a>
             <h3 id="h3center">About this page</h3>
             <img onclick="hideOrToggleMenu()" class="menu-icon" id="menu" src="menu.svg" alt="menu" >
             <nav class="nav" id="nav">
                 <img onclick="hideOrToggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="/index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="/about.html">About</a>
                     </li>
                     <li>
-                        <a href="index.html">Mortgage-calc</a>
+                        <a href="/index.html">Mortgage-calc</a>
+                    </li>
+                    <li>
+                        <a href="savings-calc.html">Savings-calc</a>
                     </li>
                 </ul>
             </nav>
