added savings calculator

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <li>
                         <a href="index.html">Mortgage-calc</a>
                     </li>
+                    <li>
+                        <a href="savings-calc.html">Savings-calc</a>
+                    </li>
                 </ul>
             </nav>
         </header>
@@ -42,8 +45,8 @@
                 <ul class="box-right">
                     <li><input type="number" name="Balance" id="balance"></li>
                     <li><input type="number" name="Years" id="years" max="40" min="1" step="0.1"></li>
-                    <li><input id="interest" name="interest" type="number" max="10" min="1" step="0.01"></li>                      
-                    <li><input id="pmt" placeholder="Monthly payment" disabled></li>
+                    <li><input id="interest" name="Interest" type="number" max="10" min="1" step="0.01"></li>                      
+                    <li><input id="pmt" placeholder="Monthly Payment" disabled></li>
                 </ul>
             </form>
         </section>
