--- a/savings-calc.html
+++ b/savings-calc.html
@@ -29,6 +29,9 @@
                     <li>
                         <a href="savings-calc.html">Savings-calc</a>
                     </li>
+		    <li>
+                        <a href="retirement.html">Retirement-calc</a>
+                    </li>
                 </ul>
             </nav>
         </header>
