--- a/retirement.html
+++ b/retirement.html
@@ -48,7 +48,7 @@
                 </ul>
                 <ul class="box-right">
                     <li><input type="number" name="Balance" id="Rbalance"></li>
-                    <li><input type="number" name="Return" id="return" max="100" min="0" step="0.01"></li>
+                    <li><input type="number" name="Return" id="return" max="100" min="0" step="0.01" placeholder="4 % for stocks"></li>
 		    <li><input type="number" name="Withdrawal" id="withdrawal"></li>                     
                     <li><input id="fundLasts" placeholder="The fund will last..." disabled></li> 
 
