--- a/savings-calc.html
+++ b/savings-calc.html
@@ -48,10 +48,10 @@
                     <li><button id="submit" type="submit">Calculate</button></li>
                 </ul>
                 <ul class="box-right">
-                    <li><input type="number" name="Balance" id="balance" value="15000"></li>
+                    <li><input type="number" name="Balance" id="balance"></li>
                     <li><input type="number" name="Payment" id="payment" value="0"></li>
-                    <li><input type="number" name="Years" id="years" max="100" min="1" step="0.1" value="10"></li>
-                    <li><input type="number" name="Interest" id="interest" max="100" min="0" step="0.01" value="4"></li>                      
+                    <li><input type="number" name="Years" id="years" max="100" min="1" step="0.1"></li>
+                    <li><input type="number" name="Interest" id="interest" max="100" min="0" step="0.01"></li>                      
                     <li><input id="savings" placeholder="Savings Calculated" disabled></li>
                 </ul>
             </form>
