--- a/retirement.html
+++ b/retirement.html
@@ -33,6 +33,9 @@
                     <li>
                         <a href="retirement.html">Retirement-calc</a>
                     </li>
+		    <li>
+                        <a href="skattetrekk.html">Skattekalkulator</a>
+                    </li>
                 </ul>
             </nav>
         </header>
