--- a/savings-calc.html
+++ b/savings-calc.html
@@ -32,6 +32,9 @@
 		    <li>
                         <a href="retirement.html">Retirement-calc</a>
                     </li>
+		    <li>
+                        <a href="skattetrekk.html">Skattekalkulator</a>
+                    </li>
                 </ul>
             </nav>
         </header>
