--- a/skattetrekk.html
+++ b/skattetrekk.html
@@ -64,7 +64,7 @@
                     <li><input type="number" name="innskuddsrente" id="innskuddsrente" value="1" step="0.01"></li>
                     <li><input type="number" name="barn" id="barn" value="1"></li>      
                     
-                    <li><input id="skt" value="Månedlig skattetrekk %" disabled></li>
+                    <li><input id="skt" value="Månedlig skattetrekk" disabled></li>
                     <!-- <li><input id="alminntekt" value="alm inntekt" disabled></li>
                     <li><input id="sktgr" value="Skattegrunnlag" disabled></li>
                     <li><input id="trygdeavgift" value="trygdeavgift" disabled></li>
