--- a/skattetrekk.html
+++ b/skattetrekk.html
@@ -34,7 +34,7 @@
             </nav>
         </header>
         <section class="after-header">
-            <p>Regn ut skattetrekket ditt i prosent:</p>
+            <p>Regn ut skattetrekket ditt i prosent</p>
         </section>
         <section class="box-calc" >
             <form class="mortgage-form" onsubmit ="return taxCalc()" action="#" id="skatteform" method="GET">
