--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		    <li>
                         <a href="skattetrekk.html">Skattekalkulator</a>
                     </li>
+			<li>
+                        <a href="utleie.html">Utleiekalkulator</a>
+                    </li>
                 </ul>
             </nav>
         </header>
