--- a/savings-calc.html
+++ b/savings-calc.html
@@ -35,6 +35,9 @@
 		    <li>
                         <a href="skattetrekk.html">Skattekalkulator</a>
                     </li>
+		    <li>
+                        <a href="utleie.html">Utleiekalkulator</a>
+                    </li>
                 </ul>
             </nav>
         </header>
