--- a/skattetrekk.html
+++ b/skattetrekk.html
@@ -28,7 +28,10 @@
                         <a href="savings-calc.html">Sparekalkulator</a>
                     </li>
                     <li>
-                        <a href="retirement.html">Annen kalkulator</a>
+                        <a href="retirement.html">Pensjonskalkulator</a>
+                    </li>
+		    <li>
+                        <a href="utleie.html">Utleiekalkulator</a>
                     </li>
                 </ul>
             </nav>
