fixed spaces between boxes

--- a/utleie.html
+++ b/utleie.html
@@ -37,7 +37,7 @@
             <p>Utleiekalkulator</p>
         </section>
       <main>
-        <section class="box-calc" >
+        <section class="box-calc box-calc1" >
             <div class="mortgage-form">
                 <ul class="box box1">
                     <p class="label">Investering:</p>
@@ -58,7 +58,7 @@
                 </ul>
             </form>
         </section>
-        <section class="box-calc" >
+        <section class="box-calc box-calc2" >
             <div class="mortgage-form">
                 <ul class="box box2">
                     <li><input id="aarligavkastning" type="text" disabled></li>
