--- a/utleie.html
+++ b/utleie.html
@@ -53,7 +53,7 @@
                     <li><input onchange="return utleieCalc()" type="number" name="leieinntekt" id="leieinntekt" placeholder="Leieinntekt per måned"><p class="unit">kr/mnd</p></li>
                     <p class="label">Løpende kostnader:</p>
                     <li><input onchange="return utleieCalc()" type="number" name="felleskostnader" id="felleskostnader" placeholder="Felleskostnader"><p class="unit">kr/mnd</p></li>
-                    <li><input onchange="return utleieCalc()" type="number" name="kommunale" id="kommunale" placeholder="Kommunale avgifter, årlig"><p class="unit">kr/år</p></li>
+                    <li><input onchange="return utleieCalc()" type="number" name="kommunale" id="kommunale" placeholder="Årlige kommunale avgifter"><p class="unit">kr/år</p></li>
                     <li><input onchange="return utleieCalc()" type="number" name="diverse" id="diverse" placeholder="Div. (forsikring, strøm etc.)"><p class="unit">kr/mnd</p></li>
                     <p class="label">Avsetninger:</p>
                     <li><input onchange="return utleieCalc()" type="number" name="vedlikehold" id="vedlikehold" placeholder="Vedlikehold, per år"><p class="unit">kr/år</p></li>      
