added value to laanerente input

--- a/utleie.html
+++ b/utleie.html
@@ -48,7 +48,7 @@
                     <li><input onchange="return utleieCalc()" type="number" name="studielaan" id="egenkapital" placeholder="Egenkapital"><p class="unit">kr</p></li>
                     <p class="label">Lånevilkår:</p>
                     <li><input onchange="return utleieCalc()" type="number" name="laanerente" id="laanerente" value="2.0" step="0.001"><p class="unit">%</p></li>   
-                    <li><input onchange="return utleieCalc()" type="number" name="nedbetalingstid" id="nedbetalingstid" placeholder="Nedbetalingstid, antall år"><p class="unit">år</p></li>
+                    <li><input onchange="return utleieCalc()" type="number" name="nedbetalingstid" id="nedbetalingstid" placeholder="Nedbetalingstid, antall år" value="30"><p class="unit">år</p></li>
                     <p class="label">Leieinntekt:</p>
                     <li><input onchange="return utleieCalc()" type="number" name="leieinntekt" id="leieinntekt" placeholder="Leieinntekt per måned"><p class="unit">kr/mnd</p></li>
                     <p class="label">Løpende kostnader:</p>
