--- a/utleie.html
+++ b/utleie.html
@@ -72,6 +72,7 @@
             <div class="mortgage-form">
                 <ul class="box box2">
                     <li><input id="aarligavkastning" type="text" disabled></li>
+                    <li></li>
                     <li><p>Leieinntekt:</p><input id="utleiekost" disabled></li>
                     <li><p>Felleskostnader:</p><input id="felleskost" disabled></li>
                     <li><p>Kommunale avgifter:</p><input id="kommavg" disabled></li>
@@ -91,7 +92,7 @@
         </section>
       </main>
         <footer>
-            <a href="#"><p>utleiekalkulator 23.08.2020</p></a>
+            <a href="#"><p>Utleiekalkulator 23.08.2020</p></a>
         </footer>
     </body>
 </html>
