added links in nav
tax calc rental calc

--- a/about.html
+++ b/about.html
@@ -17,19 +17,25 @@
                 <img onclick="hideOrToggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
                 <ul>
                     <li>
-                        <a href="/index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="/index.html">Mortgage-calc</a>
+                        <a href="index.html">Mortgage-calc</a>
                     </li>
                     <li>
                         <a href="savings-calc.html">Savings-calc</a>
                     </li>
-		    <li>
+                    <li>
                         <a href="retirement.html">Retirement-calc</a>
+                    </li>
+		    <li>
+                        <a href="skattetrekk.html">Skattekalkulator</a>
+                    </li>
+		    <li>
+                        <a href="utleie.html">Utleiekalkulator</a>
                     </li>
                 </ul>
             </nav>
