--- a/utleie.html
+++ b/utleie.html
@@ -19,7 +19,7 @@
                         <a href="utleie.html">Home</a>
                     </li>
                     <li>
-                        <a href="skattetrekk.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="index.html">Lånekalkulator</a>
