--- a/about.html
+++ b/about.html
@@ -41,7 +41,9 @@
             </nav>
         </header>
         <section class="after-header" style="flex-wrap: wrap; justify-content: center;">
-            <p>I will keep adding content to the page. More coming soon.</p>
+            <p>this site will contain different financial calulators. More pages will be added when i get neew ideas or needs.</p>
+	    <p>march 2020: mortgage calulator, savings calculator, retirement calculator</p>
+	    <p>August 2020: tax calculator, rental house calculator</p>
         </section>
         <section style="height:30em">
         </section>
