--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         </section>
         <footer>
             <a href="#" style="color: rgb(66, 59, 59);">Home</a>
-            <p>keegorg - about 22.03.2020</p>
+            <p>Jan georg Henriksen - about 22.03.2020</p>
             <a href="mailto:jangeorg85@gmail.com">Contact</a>
         </footer>
     </body>
