--- a/about.html
+++ b/about.html
@@ -40,10 +40,36 @@
                 </ul>
             </nav>
         </header>
-        <section class="after-header" style="flex-wrap: wrap; justify-content: center;">
-            <br><p>this site will contain different financial calulators. More pages will be added when i get neew ideas or needs.</p>
-	    <p>march 2020: mortgage calulator, savings calculator, retirement calculator</p><br>
-	    <p>August 2020: tax calculator, rental house calculator</p>
+        <section class="after-header" 
+	style=" 
+	margin-top: 7em; 
+	display: flex; 
+	flex-direction: column; 
+	align-items: center; 
+	width: 60%;">
+            <ul style="list-style-type:none; padding: 0; margin 0;">
+                    <li>
+			<p>lånekalkulator: beregn månedspris på annuitetslån</p>
+                    </li>
+                    <li>
+                        <p>sparekalkulator: regn ut sluttbeløp etter sparing i X år med en gitt avkastning</p>
+                    </li>
+                    <li>
+                        <p>pensjonskalkulator:regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
+                    </li>
+                    <li>
+                        <p style="max-width: 370px;">skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. Bruk heller kalkulatoren min, den gir deg eksakt prosentsats du skal betale. På skatteetaten justerer du tallene dine og krysser av for "jeg trenger prosenttrekk". Da treffer du på krona, gitt at du ikke har gjort noen store forandringer f. eks i boligsituasjon</p>
+                    </li>
+                    <li>
+                        <a href="retirement.html">Retirement-calc</a>
+                    </li>
+		    <li>
+                        <a href="skattetrekk.html">Skattekalkulator</a>
+                    </li>
+		    <li>
+                        <a href="utleie.html">Utleiekalkulator</a>
+                    </li>
+                </ul>
         </section>
         <section style="height:30em">
         </section>
