--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
 	flex-direction: column; 
 	align-items: center; 
 	width: 60%;">
+		<h2>om de forskjellige kalkulatorene:</h2>
             <ul style="list-style-type:none; padding: 0; margin 0;">
                     <li>
 			<p>lånekalkulator: beregn månedspris på annuitetslån</p>
@@ -58,16 +59,10 @@
                         <p>pensjonskalkulator:regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
                     </li>
                     <li>
-                        <p style="max-width: 370px;">skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. Bruk heller kalkulatoren min, den gir deg eksakt prosentsats du skal betale. På skatteetaten justerer du tallene dine og krysser av for "jeg trenger prosenttrekk". Da treffer du på krona, gitt at du ikke har gjort noen store forandringer f. eks i boligsituasjon</p>
+                        <p style="max-width: 65ch;">skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. Bruk heller kalkulatoren min, den gir deg eksakt prosentsats du skal betale. På skatteetaten justerer du tallene dine og krysser av for "jeg trenger prosenttrekk". Da treffer du på krona, gitt at du ikke har gjort noen store forandringer f. eks i boligsituasjon</p>
                     </li>
                     <li>
-                        <a href="retirement.html">Retirement-calc</a>
-                    </li>
-		    <li>
-                        <a href="skattetrekk.html">Skattekalkulator</a>
-                    </li>
-		    <li>
-                        <a href="utleie.html">Utleiekalkulator</a>
+                        <p>utleiekalkulator: beregn avkastning på en utleieleilighet</p>
                     </li>
                 </ul>
         </section>
