--- a/about.html
+++ b/about.html
@@ -50,19 +50,23 @@
 		<h2>om de forskjellige kalkulatorene:</h2>
             <ul style="list-style-type:none; padding: 0; margin 0;">
                     <li>
-			<p>lånekalkulator: beregn månedspris på annuitetslån</p>
+			<p style="max-width: 65ch;">lånekalkulator: beregn månedspris på annuitetslån</p>
                     </li>
                     <li>
-                        <p>sparekalkulator: regn ut sluttbeløp etter sparing i X år med en gitt avkastning</p>
+                        <p style="max-width: 65ch;">sparekalkulator: regn ut sluttbeløp etter sparing i X år med en gitt avkastning</p>
                     </li>
                     <li>
-                        <p>pensjonskalkulator:regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
+                        <p style="max-width: 65ch;">pensjonskalkulator:regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. Bruk heller kalkulatoren min, den gir deg eksakt prosentsats du skal betale. På skatteetaten justerer du tallene dine og krysser av for "jeg trenger prosenttrekk". Da treffer du på krona, gitt at du ikke har gjort noen store forandringer f. eks i boligsituasjon</p>
+                        <p style="max-width: 65ch;">skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. 
+				Bruk heller kalkulatoren min, den gir deg eksakt prosentsats du skal betale i skatt. 
+				Bruk kalkulatoren, så går du inn på skatteetaten å justerer tallene dine slik at prosentsatsen matcher min kalkulator.
+				Du må krysse av for: "jeg trenger prosenttrekk". 
+				Da treffer du på krona. </p>
                     </li>
                     <li>
-                        <p>utleiekalkulator: beregn avkastning på en utleieleilighet</p>
+                        <p style="max-width: 65ch;">utleiekalkulator: beregn avkastning på en utleieleilighet</p>
                     </li>
                 </ul>
         </section>
