--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 				Da treffer du på krona. </p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">utleiekalkulator: beregn avkastning på en utleieleilighet</p>
+                        <p style="max-width: 65ch;">utleiekalkulator: beregn årlig avkastning på en utleiebolig. Tar ikke med evt. prisstinging for boligen.</p>
                     </li>
                 </ul>
         </section>
