--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
         <footer>
             <a href="about.html">About</a>
-            <p>keegorg - calc 22.03.2020</p>
+            <p>Jan georg Henriksen - calc 22.03.2020</p>
             <a href="mailto:jangeorg85@gmail.com">Contact</a>
         </footer>
     </body>
