--- a/retirement.html
+++ b/retirement.html
@@ -66,7 +66,7 @@
         </section>
         <footer>
             <a href="about.html">About</a>
-            <p>keegorg - calc 24.03.2020</p>
+            <p>Jan Georg Henriksen - calc 24.03.2020</p>
             <a href="mailto:jangeorg85@gmail.com">Contact</a>
         </footer>
     </body>
