--- a/savings-calc.html
+++ b/savings-calc.html
@@ -64,7 +64,7 @@
         </section>
         <footer>
             <a href="about.html">About</a>
-            <p>keegorg - calc 24.03.2020</p>
+            <p>Jan Georg Henriksen - 24.03.2020</p>
             <a href="mailto:jangeorg85@gmail.com">Contact</a>
         </footer>
     </body>
