--- a/skattetrekk.html
+++ b/skattetrekk.html
@@ -80,7 +80,7 @@
         </section>
         <footer>
             <a href="about.html">About</a>
-            <p>skattetrekk 31.03.2020</p>
+            <p>Jan Georg Henriksen - 31.03.2020</p>
             <a href="mailto:jangeorg85@gmail.com">Contact</a>
         </footer>
     </body>
