--- a/about.html
+++ b/about.html
@@ -50,23 +50,23 @@
 		<h2>om de forskjellige kalkulatorene:</h2>
             <ul style="list-style-type:none; padding: 0; margin 0;">
                     <li>
-			<p style="max-width: 65ch;">lånekalkulator: beregn månedspris på annuitetslån</p>
+			<p style="max-width: 65ch;">Lånekalkulator: beregn månedspris på annuitetslån</p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">sparekalkulator: regn ut sluttbeløp etter sparing i X år med en gitt avkastning</p>
+                        <p style="max-width: 65ch;">Sparekalkulator: regn ut sluttbeløp etter sparing i X år med en gitt avkastning</p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">pensjonskalkulator:regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
+                        <p style="max-width: 65ch;">Pensjonskalkulator: regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. 
+                        <p style="max-width: 65ch;">Skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. 
 				Bruk heller kalkulatoren min, den gir deg eksakt prosentsats du skal betale i skatt. 
 				Bruk kalkulatoren, så går du inn på skatteetaten å justerer tallene dine slik at prosentsatsen matcher min kalkulator.
 				Du må krysse av for: "jeg trenger prosenttrekk". 
 				Da treffer du på krona. </p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">utleiekalkulator: beregn årlig avkastning på en utleiebolig. Tar ikke med evt. prisstinging for boligen.</p>
+                        <p style="max-width: 65ch;">Utleiekalkulator: beregn årlig avkastning på en utleiebolig. Tar ikke med evt. prisstinging for boligen.</p>
                     </li>
                 </ul>
         </section>
