--- a/about.html
+++ b/about.html
@@ -9,12 +9,13 @@
         <script src="script.js"></script>
     </head>
     <body>
+        <div class="blurred" onclick="toggleMenu()"></div>
         <header>
             <a href="/index.html">Home</a>
             <h3 id="h3center">About this page</h3>
-            <img onclick="hideOrToggleMenu()" class="menu-icon" id="menu" src="menu.svg" alt="menu" >
+            <img onclick="toggleMenu()" class="menu-icon" id="menu" src="menu.svg" alt="menu" >
             <nav class="nav" id="nav">
-                <img onclick="hideOrToggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
+                <img onclick="toggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
                 <ul>
                     <li>
                         <a href="index.html">Home</a>
@@ -48,7 +49,7 @@
 	align-items: center; 
 	width: 60%;">
 		<h2>om de forskjellige kalkulatorene:</h2>
-            <ul style="list-style-type:none; padding: 0; margin 0;">
+            <ul style="list-style-type:none; padding: 0; margin: 0;">
                     <li>
 			<p style="max-width: 65ch;">Lånekalkulator: beregn månedspris på annuitetslån</p>
                     </li>
