--- a/retirement.html
+++ b/retirement.html
@@ -11,12 +11,13 @@
         <script src="script.js"></script>
     </head>
     <body>
+        <div class="blurred" onclick="toggleMenu()"></div>
         <header>
             <a href="index.html">Home</a>
             <h3 id="h3center">Financial calculators</h3>
-            <img onclick="hideOrToggleMenu()" class="menu-icon" id="menu" src="menu.svg" alt="menu" >
+            <img onclick="toggleMenu()" class="menu-icon" id="menu" src="menu.svg" alt="menu" >
             <nav class="nav" id="nav">
-                <img onclick="hideOrToggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
+                <img onclick="toggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
                 <ul>
                     <li>
                         <a href="index.html">Home</a>
