fixed minor issues taxcalc and rental calc

--- a/about.html
+++ b/about.html
@@ -11,8 +11,7 @@
     <body>
         <div class="blurred" onclick="toggleMenu()"></div>
         <header>
-            <a href="/index.html">Home</a>
-            <h3 id="h3center">About this page</h3>
+            <a href="/index.html" style="text-decoration: none;">Home</a>
             <img onclick="toggleMenu()" class="menu-icon" id="menu" src="menu.svg" alt="menu" >
             <nav class="nav" id="nav">
                 <img onclick="toggleMenu()" class="exit-btn" src="exit.svg" alt="exit-btn">
@@ -41,42 +40,35 @@
                 </ul>
             </nav>
         </header>
-        <section class="after-header" 
-	style=" 
-	margin-top: 7em; 
+        <section
+	style="
+    margin: 5em 2em auto 2em;
 	display: flex; 
 	flex-direction: column; 
-	align-items: center; 
-	width: 60%;">
-		<h2>om de forskjellige kalkulatorene:</h2>
+	align-items: center;
+    justify-content: center;">
+		<h2>Om de forskjellige kalkulatorene:</h2>
             <ul style="list-style-type:none; padding: 0; margin: 0;">
                     <li>
-			<p style="max-width: 65ch;">Lånekalkulator: beregn månedspris på annuitetslån</p>
+			<p style="max-width: 50ch;"><span style="font-weight: 900;">Lånekalkulator:</span> beregn månedspris på annuitetslån</p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">Sparekalkulator: regn ut sluttbeløp etter sparing i X år med en gitt avkastning</p>
+                        <p style="max-width: 50ch;"><span style="font-weight: 900;">Sparekalkulator:</span> regn ut sluttbeløp etter sparing i X år med en gitt avkastning</p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">Pensjonskalkulator: regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
+                        <p style="max-width: 50ch;"><span style="font-weight: 900;">Pensjonskalkulator:</span> regn ut hvor lenge pensjonsporteføljen din varer, gitt et årlig uttak</p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">Skattekalkulator: skatteetaten gir deg en god buffer i kalkulatoren sin. 
+                        <p style="max-width: 50ch;"><span style="font-weight: 900;">Skattekalkulator:</span> skatteetaten gir deg en god buffer i kalkulatoren sin. 
 				Bruk heller kalkulatoren min, den gir deg eksakt prosentsats du skal betale i skatt. 
 				Bruk kalkulatoren, så går du inn på skatteetaten å justerer tallene dine slik at prosentsatsen matcher min kalkulator.
 				Du må krysse av for: "jeg trenger prosenttrekk". 
 				Da treffer du på krona. </p>
                     </li>
                     <li>
-                        <p style="max-width: 65ch;">Utleiekalkulator: beregn årlig avkastning på en utleiebolig. Tar ikke med evt. prisstinging for boligen.</p>
+                        <p style="max-width: 50ch;"><span style="font-weight: 900;">Utleiekalkulator:</span> beregn årlig avkastning på en utleiebolig. Tar ikke med evt. prisstinging for boligen.</p>
                     </li>
                 </ul>
         </section>
-        <section style="height:30em">
-        </section>
-        <footer>
-            <a href="#" style="color: rgb(66, 59, 59);">Home</a>
-            <p>Jan georg Henriksen - about 22.03.2020</p>
-            <a href="mailto:jangeorg85@gmail.com">Contact</a>
-        </footer>
     </body>
 </html>
