fixa ødelagt formactiongreie

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>A simple mortgage calculator:</p>
         </section>
         <section class="box-calc" >
-            <form class="mortgage-form" onsubmit="loanMonthly()" action="#" id="myform" method="GET">
+            <form class="mortgage-form" onsubmit="loanMonthly()" method="dialog" action="#" id="myform" >
                 <ul class="box-left">
                     <li><label for="balance">Mortgage balance:</label></li>
                     <li><label for="years">  Terms [ years ]: </label></li>                     
