--- a/retirement.html
+++ b/retirement.html
@@ -47,7 +47,7 @@
             <p>Retirement-fund: How long will it last?</p>
         </section>
         <section class="box-calc" >
-            <form class="mortgage-form" onsubmit ="return retirementYearly()" action="#" id="savingsform" method="GET">
+            <form class="mortgage-form" onsubmit ="return retirementYearly()" action="#" id="savingsform" method="dialog">
                 <ul class="box-left">
                     <li><label for="Rbalance">Pension fund:</label></li>
                     <li><label for="withdrawal">Yearly withdrawal:</label></li>                    
