--- a/savings-calc.html
+++ b/savings-calc.html
@@ -46,7 +46,7 @@
             <p>A simple savings calculator:</p>
         </section>
         <section class="box-calc" >
-            <form class="mortgage-form" onsubmit ="return savingsMonthly()" action="#" id="savingsform" method="GET">
+            <form class="mortgage-form" onsubmit ="return savingsMonthly()" action="#" id="savingsform" method="dialog">
                 <ul class="box-left">
                     <li><label for="balance">Initial balance:</label></li>
                     <li><label for="payment">Monthly savings:</label></li>
