--- a/skattetrekk.html
+++ b/skattetrekk.html
@@ -41,7 +41,7 @@
             <p>Regn ut skattetrekket ditt i prosent</p>
         </section>
         <section class="box-calc" >
-            <form class="mortgage-form" onsubmit ="return taxCalc()" action="#" id="skatteform" method="GET">
+            <form class="mortgage-form" onsubmit ="return taxCalc()" action="#" id="skatteform" method="dialog">
                 <ul class="box-left">
                     <li><label for="lonnsinntekter">Brutto årslønn:</label></li>
                     <li><label for="studielaan">Studielån: </label></li>                     
